--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
-file.reference.json.jar=E:\\Users\\Miguel\\Documentos\\NetBeansProjects\\WS3DProxy\\lib\\json.jar
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Miguel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
